--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -19,7 +18,7 @@
       >
 
 
-    <com.bobomee.android.mentionedittextdemo.MentionEditTextEnhance
+    <com.bobomee.android.mentions.edit.MentionEditText
         android:id="@+id/mentionedittext"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -35,6 +34,14 @@
         android:text="获取源字符串"
         android:textSize="15sp"
         />
+    <TextView
+        android:id="@+id/coverted_string"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorAccent"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        />
     <Button
         android:id="@+id/btn_clear"
         android:layout_width="match_parent"
@@ -42,12 +49,6 @@
         android:gravity="center"
         android:text="清空"
         android:textSize="15sp"
-        />
-
-    <TextView
-        android:id="@+id/coverted_string"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         />
 
 
@@ -70,6 +71,13 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="\#一个话题"
+          />
+
+      <Button
+          android:id="@+id/insert"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:text="插入整块文字"
           />
     </LinearLayout>
   </LinearLayout>
