--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
   <color name="colorPrimaryDark">#303F9F</color>
   <color name="colorAccent">#FF4081</color>
 
-  <color name="news_tab_color">#F5F5F5</color>
+  <color name="press">#F5F5F5</color>
   <color name="white">#FFFFFFFF</color>
 </resources>
